--- a/formate.toml
+++ b/formate.toml
@@ -27,7 +27,7 @@ lines_between_types = 0
 use_parentheses = true
 remove_redundant_aliases = true
 default_section = "THIRDPARTY"
-known_third_party = [ "domdf_python_tools", "github", "openpyxl", "requests",]
+known_third_party = [ "domdf_python_tools", "openpyxl",]
 known_first_party = [ "domdf_spreadsheet_tools",]
 
 [config]
