--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,11 @@
 
 [tox]
 envlist =
-    py36
     py37
     py38
     py39
     py310
     py311-dev
-    pypy36
     pypy37
     pypy38
     pypy39
@@ -41,17 +39,7 @@ requires =
     virtualenv!=20.16.0
 
 [envlists]
-test =
-    py36
-    py37
-    py38
-    py39
-    py310
-    py311-dev
-    pypy36
-    pypy37
-    pypy38
-    pypy39
+test = py37, py38, py39, py310, py311-dev, pypy37, pypy38, pypy39
 qa = mypy, lint
 
 [testenv]
@@ -96,7 +84,7 @@ commands =
     check-wheel-contents dist/
 
 [testenv:lint]
-basepython = python3.6
+basepython = python3.8
 changedir = {toxinidir}
 ignore_errors = True
 skip_install = True
@@ -126,7 +114,7 @@ deps =
 commands = python3 -m flake8_rst_docstrings_sphinx domdf_spreadsheet_tools --allow-toolbox {posargs}
 
 [testenv:perflint]
-basepython = python3.6
+basepython = python3.8
 changedir = {toxinidir}
 ignore_errors = True
 skip_install = True
@@ -134,14 +122,14 @@ deps = perflint
 commands = python3 -m perflint domdf_spreadsheet_tools {posargs}
 
 [testenv:mypy]
-basepython = python3.6
+basepython = python3.8
 ignore_errors = True
 changedir = {toxinidir}
 deps = mypy==0.971
 commands = mypy domdf_spreadsheet_tools {posargs}
 
 [testenv:pyup]
-basepython = python3.6
+basepython = python3.8
 skip_install = True
 ignore_errors = True
 changedir = {toxinidir}
@@ -167,7 +155,7 @@ inline-quotes = "
 multiline-quotes = """
 docstring-quotes = """
 count = True
-min_python_version = 3.6.1
+min_python_version = 3.7
 unused-arguments-ignore-abstract-functions = True
 unused-arguments-ignore-overload-functions = True
 unused-arguments-ignore-magic-methods = True
