--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,9 @@ envlist =
     py38
     py39
     py310
-    py311-dev
+    py311
+    py312
+    py313
     pypy37
     pypy38
     pypy39
@@ -39,7 +41,7 @@ requires =
     virtualenv!=20.16.0
 
 [envlists]
-test = py37, py38, py39, py310, py311-dev, pypy37, pypy38, pypy39
+test = py37, py38, py39, py310, py311, py312, py313, pypy37, pypy38, pypy39
 qa = mypy, lint
 
 [testenv]
@@ -53,6 +55,19 @@ commands =
     python -m importcheck {posargs:--show}
 
 [testenv:.package]
+setenv =
+    PYTHONDEVMODE=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
+[testenv:py313]
+download = True
+setenv =
+    PYTHONDEVMODE=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+    UNSAFE_PYO3_SKIP_VERSION_CHECK=1
+
+[testenv:py312]
+download = True
 setenv =
     PYTHONDEVMODE=1
     PIP_DISABLE_PIP_VERSION_CHECK=1
